infrastructures/lemoncluster/moathsalman/cloudflared-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudflared
  namespace: moathsalman
spec:
  replicas: 2
  selector:
    matchLabels:
      app: moathsalman-cloudflared
  template:
    metadata:
      labels:
        app: moathsalman-cloudflared
    spec:
      containers:
        - name: cloudflared
          image: cloudflare/cloudflared:latest
          command: ["cloudflared", "tunnel", "--no-autoupdate", "run"]
          resources:
            requests:
              cpu: 25m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
