infrastructures/lemoncluster/moathsalman/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: moathsalman
spec:
  selector:
    app: moathsalman-nginx
  ports:
    - port: 80
      targetPort: 8080
